updated result analyses

--- a/sunniva/Check_results_multi.ipynb
+++ b/sunniva/Check_results_multi.ipynb
@@ -154,6 +154,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "id": "d007a3e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pred</th>\n",
+       "      <th>label</th>\n",
+       "      <th>prob</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>640</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>Correct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>Correct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>Correct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>Correct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>546</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>Wrong</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     pred  label  prob   result\n",
+       "640     2      2  1.00  Correct\n",
+       "164     0      0  0.93  Correct\n",
+       "69      0      0  0.82  Correct\n",
+       "81      0      0  1.00  Correct\n",
+       "546     2      1  0.89    Wrong"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 68,
    "id": "34a7beaa",
    "metadata": {},
