--- a/artush/check_results_kappa.ipynb
+++ b/artush/check_results_kappa.ipynb
@@ -182,9 +182,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "patient_idx <class 'h5py._hl.dataset.Dataset'>\n",
+      " - Shape: (2229,), Datatype: int32\n",
+      "5984453\n",
+      "predicted <class 'h5py._hl.dataset.Dataset'>\n",
+      " - Shape: (2229, 4), Datatype: float32\n",
+      "[2.0619575e+03 1.6801049e-06 3.5475871e-08 1.6704266e+02]\n",
+      "y <class 'h5py._hl.dataset.Dataset'>\n",
+      " - Shape: (2229, 4), Datatype: float32\n",
+      "[1983.  100.   75.   71.]\n"
+     ]
+    }
+   ],
    "source": [
     "def print_h5_structure(filename: str):\n",
     "    with h5py.File(filename, 'r') as file:\n",
@@ -192,6 +208,7 @@
     "            print(name, type(obj))\n",
     "            if isinstance(obj, h5py.Dataset):\n",
     "                print(f\" - Shape: {obj.shape}, Datatype: {obj.dtype}\")\n",
+    "                print(obj[:].sum(axis=0))\n",
     "\n",
     "        file.visititems(print_structure)\n",
     "\n",
@@ -201,9 +218,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Group: fold_0\n",
+      "Dataset: fold_0/diagnosis, Shape: (1024,), Datatype: float32\n",
+      "Dataset: fold_0/image, Shape: (1024, 800, 800, 1), Datatype: float32\n",
+      "Dataset: fold_0/patient_idx, Shape: (1024,), Datatype: int32\n",
+      "Dataset: fold_0/target, Shape: (1024,), Datatype: float32\n",
+      "Group: fold_1\n",
+      "Dataset: fold_1/diagnosis, Shape: (1024,), Datatype: float32\n",
+      "Dataset: fold_1/image, Shape: (1024, 800, 800, 1), Datatype: float32\n",
+      "Dataset: fold_1/patient_idx, Shape: (1024,), Datatype: int32\n",
+      "Dataset: fold_1/target, Shape: (1024,), Datatype: float32\n",
+      "Group: fold_2\n",
+      "Dataset: fold_2/diagnosis, Shape: (1024,), Datatype: float32\n",
+      "Dataset: fold_2/image, Shape: (1024, 800, 800, 1), Datatype: float32\n",
+      "Dataset: fold_2/patient_idx, Shape: (1024,), Datatype: int32\n",
+      "Dataset: fold_2/target, Shape: (1024,), Datatype: float32\n",
+      "Group: fold_3\n",
+      "Dataset: fold_3/diagnosis, Shape: (1024,), Datatype: float32\n",
+      "Dataset: fold_3/image, Shape: (1024, 800, 800, 1), Datatype: float32\n",
+      "Dataset: fold_3/patient_idx, Shape: (1024,), Datatype: int32\n",
+      "Dataset: fold_3/target, Shape: (1024,), Datatype: float32\n",
+      "Group: fold_4\n",
+      "Dataset: fold_4/diagnosis, Shape: (1000,), Datatype: float32\n",
+      "Dataset: fold_4/image, Shape: (1000, 800, 800, 1), Datatype: float32\n",
+      "Dataset: fold_4/patient_idx, Shape: (1000,), Datatype: int32\n",
+      "Dataset: fold_4/target, Shape: (1000,), Datatype: float32\n",
+      "Group: fold_5\n",
+      "Dataset: fold_5/diagnosis, Shape: (2229,), Datatype: float32\n",
+      "Dataset: fold_5/image, Shape: (2229, 800, 800, 1), Datatype: float32\n",
+      "Dataset: fold_5/patient_idx, Shape: (2229,), Datatype: int32\n",
+      "Dataset: fold_5/target, Shape: (2229,), Datatype: float32\n"
+     ]
+    }
+   ],
    "source": [
     "#Checking the structure of the h5 file\n",
     "\n",
