--- a/artush/check_results_abnormal.ipynb
+++ b/artush/check_results_abnormal.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -252,11 +252,11 @@
       " - Shape: (500,), Datatype: float32\n",
       "2131040.0\n",
       "predicted <class 'h5py._hl.dataset.Dataset'>\n",
-      " - Shape: (500, 3), Datatype: float32\n",
-      "[212.3138  128.33047 159.35577]\n",
+      " - Shape: (500, 1), Datatype: float32\n",
+      "[457.7724]\n",
       "y <class 'h5py._hl.dataset.Dataset'>\n",
-      " - Shape: (500, 3), Datatype: float32\n",
-      "[197. 150. 153.]\n"
+      " - Shape: (500,), Datatype: float32\n",
+      "456.0\n"
      ]
     }
    ],
@@ -271,18 +271,31 @@
     "\n",
     "        file.visititems(print_structure)\n",
     "\n",
-    "filename = 'S:/Master/cubiai/h5_files/3_class/b1_001_categorical_level/prediction.038.h5'\n",
+    "filename = 'S:/Master/cubiai/h5_files/3_class/b1_0005_linear_level/prediction.029.h5'\n",
     "print_h5_structure(filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AxisError",
+     "evalue": "axis 1 is out of bounds for array of dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_20488\\3266741566.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# images, ds = image_extraction('S:/Master/data/elbow_abnormal_800.h5')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest_result_extraction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'S:/Master/cubiai/h5_files/3_class/b1_0005_linear_level/prediction.029.h5'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_20488\\3206786736.py\u001b[0m in \u001b[0;36mtest_result_extraction\u001b[1;34m(filename)\u001b[0m\n\u001b[0;32m     52\u001b[0m     \u001b[0mpred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'predicted'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m     \u001b[0mpatient\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'patient_idx'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 54\u001b[1;33m     \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'y'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     55\u001b[0m     \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAxisError\u001b[0m: axis 1 is out of bounds for array of dimension 1"
+     ]
+    }
+   ],
    "source": [
     "# images, ds = image_extraction('S:/Master/data/elbow_abnormal_800.h5')\n",
-    "df = test_result_extraction('S:/Master/cubiai/h5_files/3_class/b1_001_kappa_level/prediction.033.h5')"
+    "df = test_result_extraction('S:/Master/cubiai/h5_files/3_class/b1_0005_linear_level/prediction.029.h5')"
    ]
   },
   {
